# project_singleLeg

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  note.md
core_lib/: CMakeLists.txt
core_lib/model/: mk1.xml  mk1_mjcf.xml  spot.xml  test.xml
core_lib/src/: main.cpp  sim_test.cpp
src/: package.xml
src/analysis_py/: prof.py  workspace_viewer.py
src/core_lib/: CMakeLists.txt  package.xml
src/core_lib/Forward_Kinematics_Algorithm/: leg_FK.cpp  leg_FK.h
src/core_lib/include/core_lib/: kinematics.h  leg_FK.h
src/core_lib/model/: fixed_leg.xml
src/core_lib/src/: kinematics.cpp  leg_FK.cpp
src/simulation/: CMakeLists.txt  package.xml  sim_test.cpp
src/test/: CMakeLists.txt  KF_test.cpp  package.xml
src/test/src/: KF_test.cpp  Robustness_test.cpp  kinematics_verify.cpp
