<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>simulation package for Single Leg Kinematics with Local Eigen</description>
  <maintainer email="kgbkevin@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>core_lib</depend>
  <depend>mujoco</depend>
  <depend>glfw3</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>